//
//
// db3_mutation.proto
// Copyright (C) 2022 db3.network Author imotai <codego.me@gmail.com>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";
import "db3_base.proto";
import "db3_mutation.proto";

package db3_session_proto;

message QuerySessionInfo {
    // the hex encoded string
    int32 id = 1;
    int64 start_time = 2;
    int32 query_count = 3;
    // the meta for client 
    db3_base_proto.BroadcastMeta meta = 4;
}

message OpenSessionPayload {
    string header = 1;
    int64 start_time = 2;
}

// the session for mutation
message QuerySession {
    // the meta for node client
    db3_base_proto.BroadcastMeta meta = 1;
    // the agreed session info
    bytes payload = 2;
    // client signature
    bytes client_signature = 3;
    // the type of payload
    db3_mutation_proto.PayloadType payload_type = 4;
}
